Fix banner size, alignment, separate nightmode

--- a/_banner.scss
+++ b/_banner.scss
@@ -1,4 +1,6 @@
 // Custom banners get full background control through these variables.
 
- $header-background: url("images/header.png") scroll center center / 100% #1b1e25 no-repeat;
- $header-background-nightmode: $header-background;
+// $header-background: url("images/header.png") center left/auto 100% #1b1e25 no-repeat;  // used for awards
+// $header-background-nightmode: $header-background;
+$header-background: url("images/header.png") scroll center bottom / 100% #6a9de6 no-repeat;
+$header-background-nightmode: url("images/header.png") scroll center bottom / 100% #445f7e no-repeat;
